fix: App.jsx component overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,10 @@
 .mainContent {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
     padding: 20px 40px;
     max-width: 1440px;
+    height: 100%;
+    max-height: 100vh;
     margin: 0 auto;
 }
