--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,15 @@
 *, *::before, *::after {
   box-sizing: border-box;
+  font-family: Inter, sans-serif, Avenir, Helvetica, Arial, sans-serif;
 }
 
 :root {
-  min-height: 100vh;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 }
 
 body {
-  height: 100%;
-  width: 100%;
   margin: 0;
 }
 
@@ -23,13 +17,13 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
+h1 {
+  letter-spacing: 0.8px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-
-  button {
-    background-color: #f9f9f9;
   }
 }
